Fix whitespace on small screen
- Reverted primary navigation back to static HTML now that we're using
the footer for the mobile nav.
- Updates to print stylesheet

--- a/app/assets/stylesheets/base/print.css.scss
+++ b/app/assets/stylesheets/base/print.css.scss
@@ -1,13 +1,13 @@
 // deep breath...
-#megamenu, #masthead-nav-condensed, #masthead-mid-header-wrapper, #masthead-right-header-wrapper, 
-#beta-bar, #offscreen-header, #broadcast-bar-outer-container,
+#megamenu, #masthead-mid-header-wrapper, #masthead-right-header-wrapper, 
+#beta-bar, #offscreen-header, #broadcast-bar,
 #sidebar, #sidebar-top, #sidebar-bottom,
 #dsq-reply, #dsq-global-toolbar, #dsq-realtime-options, #dsq-sort-by, #dsq-pagination, #dsq-reactions, .dsq-h3-reactions, #dsq-show-more-reactions,
 #article-content-carousel, #article-article-meta, #article-sharing-tools, #article-related-content, .comment-count.social_disq, .story-audio,
 #other-segments, #more-events, .slideview .nav, .slideview li,
 #program-masthead-support, #program-masthead-headshot, .section-nav-header,
 #fold-comments-count-widget, .sfy-story, #article-next-prev,
-#page-footer,
+#page-footer, #footer-nav,
 .audio-bar, #uvTab, object, embed, iframe { display: none !important; }
 
 .slideview li:first-child { display: block !important; } // We're hiding them above, and then showing just the first one here
